# sniff-test

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/hocklorp/: Cargo.toml
crates/hocklorp/src/: lib.rs
crates/hocklorp/src/annotations/: attr.rs  err.rs  mod.rs  parsing.rs  types.rs
crates/hocklorp/src/parsing/: err.rs  mod.rs  str.rs  test.rs  types.rs
crates/sniff-test/: Cargo.toml  README.md  build.rs
crates/sniff-test/src/: lib.rs
crates/sniff-test/src/annotations/: attr.rs  check.rs  doc.rs  err.rs  mod.rs  new_parsing.rs  parsing.rs  span.rs  toml.rs  types.rs
crates/sniff-test/src/axioms/: mod.rs  panic.rs  safety.rs
crates/sniff-test/src/check/: err.rs  expr.rs  mod.rs
crates/sniff-test/src/properties/: mod.rs  panic.rs  safety.rs
crates/sniff-test/src/reachability/: attr.rs  attrs.rs  bad.rs  calls.rs  entry.rs  err.rs  mod.rs  reach.rs  walk.rs
crates/sniff-test/src/utils/: err.rs  mod.rs
tests/: Cargo.toml  README.md  approach.md  justified_call  lib.rs  ref_deref
tests/panics/: 00_basic.rs  00_basic.snap  01_unused.rs  01_unused.snap  02_dynamic_closure.rs  02_dynamic_closure.snap  02b_dyn_box.rs  02b_dyn_box.snap  03_captured_closure.rs  03_captured_closure.snap  04_generics.rs  05_generics_fixed?.txt  05b_generics_fixed?.rs
tests/toml/fail_external/: Cargo.toml  fail_external.snap  sniff-test.toml
tests/toml/pass_external/: Cargo.toml  pass_external.snap
tests/toml/pass_local/: Cargo.toml  pass_local.snap  pass_simple.snap  sniff-test.toml
tests/unsafe/annotations/: global.rs  global.snap  global_pub.rs  global_pub.snap
tests/unsafe/axioms/: raw_deref.rs  raw_deref.snap  ref_deref.rs  ref_deref.snap
tests/unsafe/calls/: justified_call.rs  justified_call.snap  unjustified_call.rs  unjustified_call.snap
tests/unsafe/example_crate/: Cargo.toml  example_crate.snap
tests/unsafe/fail_nested/: Cargo.toml  fail_nested.snap
tests/unsafe/fail_not_annotated/: Cargo.toml  fail_not_annotated.snap
tests/unsafe/fail_simple/: Cargo.toml  fail_simple.snap
tests/unsafe/fail_trait/: Cargo.toml
tests/unsafe/invalid_simple/: Cargo.toml
tests/unsafe/pass_nested/: Cargo.toml  pass_nested.snap
tests/unsafe/pass_simple/: Cargo.toml  pass_simple.snap
tests/unsafe/placement/: call_block.rs  call_block.snap  call_block_def.rs  call_block_def.snap  call_direct.rs  call_direct.snap  call_let.rs  call_let.snap  call_let_def.rs  call_let_def.snap
(+27 files in other folders)
