[package]
name = "sniff-test"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
rustc_plugin = "=0.14.3-nightly-2025-08-20"
rustc_utils = "=0.14.3-nightly-2025-08-20"
sniff-test-attrs ={ path = "../sniff-test-attrs" }
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
regex = "1.11.2"
anyhow = "1.0.100"
itertools = "0.14.0"
toml = "0.9.8"
log = "0.4.28"

[build-dependencies]
rustc_plugin = "=0.14.3-nightly-2025-08-20"
